<resources>
    <string name="app_name">RickAndMortyTarea</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>
    <string name="episodes">Episodios</string>
    <string name="stats">Estadísticas</string>
    <string name="about">Acerca de...</string>
    <string name="settings">Ajustes</string>
    <string name="CharactersTitle">Personajes</string>
    <string name="seen">Visto</string>


    <string name="aboutDialogTitle">Acerca de</string>
    <string name="aboutDialogDeveloper">Desarrollador: \nAlejandro Tinedo Requesens</string>
    <string name="aboutDialogButtom">Cerrar</string>
    <string name="aboutDialogVersion">Versión: 1.0.0</string>
    <string name="dark_mode">Claro</string>
    <string name="language">ES / EN</string>
    <string name="language_title">Idioma</string>
    <string name="theme_title">Tema</string>
    <string name="close_session">Cerrar sesión</string>

</resources>