<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical">

    <TextView
        style="@style/aboutDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutDialogTitle" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:layout_weight="1"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDeveloper"
                style="@style/aboutDialogText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="@string/aboutDialogDeveloper" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="30dp" />

            <TextView
                android:id="@+id/tvVersion"
                style="@style/aboutDialogText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="@string/aboutDialogVersion" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnClose"
        style="@style/aboutDialogButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutDialogButtom" />


</LinearLayout>